--- a/stock-core/src/main/resources/static/styles/style.css
+++ b/stock-core/src/main/resources/static/styles/style.css
@@ -35,7 +35,7 @@ li {
 form {
   /* 居中表单 */
   margin: 0 auto;
-  width: 400px;
+  width: 500px;
   /* 显示表单的轮廓 */
   padding: 1em;
   border: 1px solid #CCC;
@@ -95,4 +95,13 @@ button {
   width: 90%;
   height: 500px;
   border: 1px solid black;
+}
+
+progress {
+  position: relative;
+}
+progress span {
+  position: absolute;
+  top: 0;
+  right: 5px;
 }
