:sparkles: 实现批量荐股功能。
TODO:
展示股票评论。
展示策略有效性
选择最优策略。

--- a/stock-core/src/main/resources/static/styles/style.css
+++ b/stock-core/src/main/resources/static/styles/style.css
@@ -156,7 +156,7 @@ button {
 
 .chart {
   width: 90%;
-  height: 500px;
+  height: 800px;
   border: 1px solid black;
 }
 
@@ -232,4 +232,17 @@ tbody {
 
 tfoot {
   font-weight: bold;
+}
+
+/* 风险的颜色 */
+.high-risk {
+  color: red;
+}
+
+.low-risk {
+  color: greenyellow;
+}
+
+.mid-risk {
+  color: yellow;
 }
