--- a/stock-core/src/main/resources/static/styles/style.css
+++ b/stock-core/src/main/resources/static/styles/style.css
@@ -1,5 +1,4 @@
 html {
-    font-size: 10px;
     font-family: 'Open Sans', sans-serif;
     background-color: #00539F;
 }
@@ -66,7 +65,7 @@ nav li {
 
 nav a, nav span {
   display: inline-block;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   height: 3rem;
   line-height: 1.7;
   text-transform: uppercase;
@@ -89,7 +88,7 @@ img {
 
 p,
 li {
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 2;
     letter-spacing: 1px;
 }
@@ -186,7 +185,7 @@ input:focus:invalid {
   width  : 100%;
   padding: 0;
  
-  font-size: 80%;
+  /* font-size: 80%; */
   color: white;
   background-color: #900;
   border-radius: 0 0 5px 5px;
@@ -205,7 +204,7 @@ table {
   border-collapse: collapse;
   border: 2px solid;
   letter-spacing: 1px;
-  font-size: 0.8rem;
+  /* font-size: 0.8rem; */
 }
 
 td, th {
@@ -226,7 +225,6 @@ caption {
 }
 
 tbody {
-  font-size: 90%;
   font-style: italic;
 }
 
@@ -240,9 +238,9 @@ tfoot {
 }
 
 .low-risk {
-  color: greenyellow;
+  color: green;
 }
 
 .mid-risk {
-  color: yellow;
+  color: orange;
 }
