--- a/stock-core/src/main/resources/static/styles/style.css
+++ b/stock-core/src/main/resources/static/styles/style.css
@@ -1,3 +1,27 @@
+@media (min-device-width:600px) {
+  img[data-src-600px] {
+    content: attr(data-src-600px, url);
+  }
+}
+
+@media (min-device-width:800px) {
+  img[data-src-800px] {
+    content: attr(data-src-800px,url);
+  }
+}
+
+@media (min-width: 640px) {
+  body {font-size: 1rem;}
+}
+
+@media (min-width: 960px) {
+  body {font-size: 1.2rem;}
+}
+
+@media (min-width: 1100px) {
+  body {font-size: 1.5rem;}
+}
+
 html {
     font-family: 'Open Sans', sans-serif;
     background-color: #00539F;
@@ -9,6 +33,7 @@ body {
     background-color: white;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
+    font-size: 100%;
 }
 
 /* 主布局 */
